@@ -1514,4 +1514,6 @@
 	  file like /etc/passwd (2016-01-19).
 	* apps/nshlib/nsh_passwdcmds.c:  Add useradd, userdel, and passwd
 	  commands (2019-01-20).
+	* apps/nshlib:  Now supports a Message of the Day (MOTD) that will
+	  be presented after the NSH greeting (2015-01-20).
 
